Correction on mobile layout

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ header {
 
 .input-wrapper input::placeholder {
   color: #FFF;
-  opacity: 0.56;
+  opacity: 0.5;
 
   font-size: 1.6rem;
 }
@@ -79,13 +79,29 @@ header {
   height: 4.0rem;
 }
 
-main {
-  padding: 2.4rem 3.2rem;
-}
-
 main h1 {
   font-size: 2.4rem;
   font-weight: 700;
+
+  padding: 3.2rem 2.4rem 0;
+}
+
+.content >img:nth-child(1){
+  width: 100%;
+  border-radius: 0%;
+  height: 21.9rem;
+  margin: 0;
+
+}
+
+.content >img:nth-child(3){
+  margin-left: 2.4rem;
+
+  background-color: #065E7C;
+  height: 3.0rem;
+  border-radius: 50%;
+  margin-top: .8rem;
+
 }
 
 .content img {
@@ -96,8 +112,12 @@ main h1 {
 }
 
 .content p {
-  margin-top: 3.2rem;
-  margin-bottom: 3.2rem;
+ padding: 2.4rem 2.4rem 0;
+  
+}
+
+.articles {
+  padding: 3.2rem 2.4rem 3.2rem;
 }
 
 .articles h1 {
@@ -109,6 +129,9 @@ main h1 {
 
   width: auto;
   height: auto;
+
+  padding: 0;
+
 }
 .card {
   margin-top: 3.2rem;
@@ -136,4 +159,14 @@ footer {
   background: #387E96;
   color: #FFF;
   font-weight: 600;
+}
+
+@media (min-width: 1024px) {
+  main {
+    display: grid;
+    grid-template-columns: 2fr 1fr; 
+    gap: 3.4rem;
+    margin: 0 3.0rem; 
+  }
+
 }
